--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ section#principal {
 #principal.banner {
     position: relative;
     min-height: 100vh;
-    background: url(./css/img/banner1.jpg);
+    background: url(/img/banner1.jpg);
     background-size: cover;
     background-position: right;
     display: flex;
@@ -496,7 +496,7 @@ section#projects {
     .toggle {
         width: 40px;
         height: 40px;
-        background: url(./css/img/menu.png);
+        background: url(/img/menu.png);
         background-repeat: no-repeat;
         background-size: 30px;
         cursor: pointer;
@@ -504,7 +504,7 @@ section#projects {
     }
 
     .toggle.active {
-        background: url(./css/img/close.png);
+        background: url(/img/close.png);
         background-position: center;
         background-repeat: no-repeat;
         background-size: 25px;
